--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,3 +33,6 @@ jobs:
       
     - name: Run tests
       run: CI=true npm test -- --coverage
+
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v1
